--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
  <head>
+ 
   <meta charset="utf-8" />
   <title>index</title>
-
  
  </head>
  <body>
+ 
   <p>Hello world!</p>
   <p>I'm index</p>
+  <p>What is your name?</p>
+  <input type="text">
+  
  </body>
 </html>
