Add two <br> and text

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <p>Hello world!</p>
   <p>I'm index</p>
   <p>What is your name?</p>
-  <input type="text">
-  <input type="submit">
-  SEE
+  <input type="text"><br>
+  <input type="submit"><br>
+  SEE you!
   
  </body>
 </html>
