Add two <input>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <p>I'm index</p>
   <p>What is your name?</p>
   <input type="text"><br>
+  <input type="text"><br>
+  <input type="text"><br>
   <input type="submit"><br>
   SEE you!
   
