--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
  <head>
  
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>index</title>
  
  </head>
@@ -11,11 +11,12 @@
   <p>Hello world!</p>
   <p>I'm index</p>
   <p>What is your name?</p>
-  <input type="text"><br>
-  <input type="text"><br>
-  <input type="text"><br>
+  <input type="text" value="Имя"><br>
+  <input type="text" value="Фамилия"><br>
+  <input type="text" value="Отчество"><br>
   <input type="submit"><br>
   SEE you!
+  
   
  </body>
 </html>
