del text and question of country

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <input type="text" value="Фамилия"><br>
   <input type="text" value="Отчество"><br>
   <input type="submit"><br>
-  SEE you!
+  <p>Where are you from?</P>
+  
   
   
  </body>
