question of eat

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <input type="text" value="Фамилия"><br>
   <input type="text" value="Отчество"><br>
   <input type="submit"><br>
-  SEE you!
+  <p>Your favorite food</p>
   
   
  </body>
