--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <input type="text" value="Отчество"><br>
   <input type="submit"><br>
   <p>Where are you from?</P>
-  
+  <input type="submit"><br>
   <p>Your favorite food</p>
   
   
